tests/snapshots/anchor_tests__test_anchor_declaration_basic.snap
---
source: tests/anchor_tests.rs
description: Should link anchor to external URL
info: "[homepage]{https://example.com}"
---
[
  Paragraph([
    AnchorDefinition(
      content: [
        Token(Text("homepage")),
      ],
      target: Link(
        filepath: None,
        targets: [
          Url("https://example.com"),
        ],
        description: None,
      ),
    ),
  ]),
]
